--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ Cairo = "159f3aea-2a34-519c-b102-8c37f9878175"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 Compose = "a81c6b42-2e10-5240-aca2-a61377ecd94b"
 Fontconfig = "186bb1d3-e1f7-5a2c-a377-96d770f13627"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
