--- a/Project.toml
+++ b/Project.toml
@@ -7,11 +7,13 @@ version = "0.1.0"
 Cairo = "159f3aea-2a34-519c-b102-8c37f9878175"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 Compose = "a81c6b42-2e10-5240-aca2-a61377ecd94b"
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Fontconfig = "186bb1d3-e1f7-5a2c-a377-96d770f13627"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
-Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 LightXML = "9c8b4983-aa76-5018-a973-4c85ecc9e179"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
