--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,8 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 Fontconfig = "186bb1d3-e1f7-5a2c-a377-96d770f13627"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+GeoArrays = "2fb1d81b-e6a0-5fc5-82e6-8e06903437ab"
+GeoStats = "dcc97b0b-8ce5-5539-9008-bb190f959ef6"
 GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 ImageMetadata = "bc367c6b-8a6b-528e-b4bd-a4b897500b49"
@@ -23,6 +25,7 @@ Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Proj4 = "9a7e659c-8ee8-5706-894e-f68f43bc57ea"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
