--- a/Project.toml
+++ b/Project.toml
@@ -28,7 +28,9 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Proj4 = "9a7e659c-8ee8-5706-894e-f68f43bc57ea"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+SuiteSparse = "4607b0f0-06f3-5cda-b6b1-a6196a1729e9"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
